# voobly-scraper

./: .ghcid  .gitignore  README.md  stack.yaml  voobly-scraper.cabal
app/: Main.hs
src/Data/Mgz/: Constants.hs  Deserialise.hs  Simulate.hs  Utils.hs
src/Data/Mgz/Constants/: Objects.hs  Techs.hs
src/Data/Mgz/Deserialise/: BasicTypes.hs  Commands.hs
src/Data/Mgz/Simulate/: Command.hs  Events.hs  Objects.hs  Render.hs  State.hs
src/Voobly/: Analyzer.hs  DB.hs  Scraper.hs  TH.hs
test/: simHistory  simObjects
