name:                voobly-scraper
version:             0.1.0.0
synopsis:            Voobly scraper
description:         Please see README.md
homepage:            http://github.com/bowswung/voobly-scraper#readme
license:             AllRightsReserved
author:              Bowswung
maintainer:          bowswung@gmail.com
copyright:           Bowswung
category:            Web
build-type:          Simple
cabal-version:       >= 1.24

library
  exposed-modules:
    Voobly.Scraper
    Voobly.DB
    Voobly.TH

  build-depends:
    rio,
    http-client,
    http-types,
    http-client-tls,
    optparse-applicative,
    mtl,
    acid-state,
    safecopy,
    lens,
    ixset-typed,
    template-haskell,
    html-parse,
    containers,
    cassava,
    regex-posix,
    hashable,
    process,
    safe

  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns
executable voobly-scraper-exe
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    voobly-scraper,
    rio

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language: Haskell2010
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns

source-repository head
  type:     git
  location: https://github.com/bowswung/voobly-scraper
