name:                voobly-scraper
version:             0.1.1
synopsis:            Voobly scraper
description:         Please see README.md
homepage:            http://github.com/bowswung/voobly-scraper#readme
license:             AllRightsReserved
author:              Bowswung
maintainer:          bowswung@gmail.com
copyright:           Bowswung
category:            Web
build-type:          Simple
cabal-version:       >= 1.24

library
  exposed-modules:
    Voobly.Scraper
    Voobly.DB
    Voobly.TH
    Data.Mgz.Deserialise
    Data.Mgz.Simulate



  build-depends:
    base,
    rio,
    http-client,
    http-types,
    http-client-tls,
    optparse-applicative,
    mtl,
    acid-state,
    safecopy,
    lens,
    ixset-typed,
    template-haskell,
    html-parse,
    containers,
    cassava,
    regex-posix,
    hashable,
    process,
    safe,
    async,
    async-extra,
    cron,
    deepseq,
    exceptions,
    conduit,
    aeson,
    extra,
    directory,
    zip,
    binary,
    attoparsec,
    zlib,
    bytestring,
    text,
    base16-bytestring

  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -O2
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns
executable voobly-scraper-exe
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    voobly-scraper,
    rio

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2

  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns

source-repository head
  type:     git
  location: https://github.com/bowswung/voobly-scraper
